--- a/DataScience/RiceProject/Exercise_part1.ipynb
+++ b/DataScience/RiceProject/Exercise_part1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "c90e55c4",
    "metadata": {},
    "outputs": [],
@@ -37,50 +37,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "a4edcf91",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                image  \\\n",
-      "0   [[[0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], ...   \n",
-      "1   [[[0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], ...   \n",
-      "2   [[[0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], ...   \n",
-      "3   [[[0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], ...   \n",
-      "4   [[[0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], ...   \n",
-      "..                                                ...   \n",
-      "95  [[[0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], ...   \n",
-      "96  [[[0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], ...   \n",
-      "97  [[[0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], ...   \n",
-      "98  [[[0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], ...   \n",
-      "99  [[[0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], ...   \n",
-      "\n",
-      "                                              contour  \n",
-      "0   ([[[154  50]], [[153  51]], [[149  51]], [[148...  \n",
-      "1   ([[[148  94]], [[147  95]], [[140  95]], [[139...  \n",
-      "2   ([[[84 71]], [[83 72]], [[82 72]], [[76 78]], ...  \n",
-      "3   ([[[133  53]], [[132  54]], [[129  54]], [[127...  \n",
-      "4   ([[[128  54]], [[126  56]], [[124  56]], [[123...  \n",
-      "..                                                ...  \n",
-      "95  ([[[71 83]], [[70 84]], [[68 84]], [[66 86]], ...  \n",
-      "96  ([[[154  83]], [[153  84]], [[150  84]], [[149...  \n",
-      "97  ([[[119  61]], [[118  62]], [[117  62]], [[116...  \n",
-      "98  ([[[158  82]], [[157  83]], [[154  83]], [[153...  \n",
-      "99  ([[[41 64]], [[38 67]], [[38 70]], [[37 71]], ...  \n",
-      "\n",
-      "[100 rows x 2 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "# List all the image files in the directory\n",
-    "image_files = [f for f in os.listdir('Rice_Image:dataset_Rice_image_Dataset/Arborio') if f.endswith('.jpg')]\n",
-    "image_files2 = [f for f in os.listdir('data/Basmatyi') if f.endswith('.jpg')]\n",
+    "image_files = [f for f in os.listdir('data/Arborio') if f.endswith('.jpg')]\n",
+    "image_files2 = [f for f in os.listdir('data/Basmati') if f.endswith('.jpg')]\n",
     "image_files3 = [f for f in os.listdir('data/Jasmine') if f.endswith('.jpg')]\n",
     "# Randomly select 100 image files\n",
     "selected_files = random.sample(image_files, 100)\n",
@@ -116,59 +80,6 @@
     "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY) \n",
     "    _, thresholded = cv2.threshold(gray, 128, 255, cv2.THRESH_BINARY)\n",
     "    contours, _ = cv2.findContours(thresholded, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)                           \n",
-    "    df3 = df3.append({'image': image, 'contour' : contours}, ignore_index=True)\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "8c0e2e5b-1f4b-4a37-9bfa-a3a784baaf20",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'append'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_12504\\1745957673.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mimage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mImage\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Rice_Image_Dataset/Rice_image_Dataset/Arborio/'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[0mgray\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcvtColor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCOLOR_BGR2GRAY\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[0m_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mthresholded\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mthreshold\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m128\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m255\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTHRESH_BINARY\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[0mcontours\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfindContours\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mthresholded\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mRETR_EXTERNAL\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCHAIN_APPROX_SIMPLE\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m     \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m'image'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mimage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'contour'\u001b[0m \u001b[1;33m:\u001b[0m \u001b[0mcontours\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;31m# Repeat the process for other selected files\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mfile\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mselected_files2\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Python312\\Lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   6295\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6296\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6297\u001b[0m         \u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6298\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 6299\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'append'"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "# Create empty DataFrames\n",
-    "df = pd.DataFrame(columns=['image'])\n",
-    "df2 = pd.DataFrame(columns=['image'])\n",
-    "df3 = pd.DataFrame(columns=['image'])\n",
-    "\n",
-    "# Load each selected image file into a numpy array and add it as a new row in the DataFrame\n",
-    "for file in selected_files:\n",
-    "    image = np.array(Image.open('Rice_Image_Dataset/Rice_image_Dataset/Arborio/' + file))\n",
-    "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY) \n",
-    "    _, thresholded = cv2.threshold(gray, 128, 255, cv2.THRESH_BINARY)\n",
-    "    contours, _ = cv2.findContours(thresholded, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
-    "    df = df.append({'image': image, 'contour' : contours}, ignore_index=True)\n",
-    "\n",
-    "# Repeat the process for other selected files\n",
-    "for file in selected_files2:\n",
-    "    image = np.array(Image.open('Rice_Image_Dataset/Rice_image_Dataset/Basmati/' + file))\n",
-    "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY) \n",
-    "    _, thresholded = cv2.threshold(gray, 128, 255, cv2.THRESH_BINARY)\n",
-    "    contours, _ = cv2.findContours(thresholded, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
-    "    df2 = df2.append({'image': image, 'contour' : contours}, ignore_index=True)\n",
-    "\n",
-    "for file in selected_files3:\n",
-    "    image = np.array(Image.open('Rice_Image_Dataset/Rice_image_Dataset/Jasmine/' + file))\n",
-    "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY) \n",
-    "    _, thresholded = cv2.threshold(gray, 128, 255, cv2.THRESH_BINARY)\n",
-    "    contours, _ = cv2.findContours(thresholded, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
     "    df3 = df3.append({'image': image, 'contour' : contours}, ignore_index=True)\n",
     "\n",
     "\n"
@@ -583,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
